--- a/print.css
+++ b/print.css
@@ -1,3 +1,15 @@
-div.approval a {
+div.approval {
 	display: none;
+}
+
+table.approve-print-only {
+    display: table;
+}
+
+.approve-noprint {
+	display: none;
+}
+
+#dokuwiki__content .page {
+	min-height: 0 !important;
 }
