added functionality for intermediate state 'ready for approval' to mark a page ready for approval without being able to approve the page (edit permission only)

--- a/style.css
+++ b/style.css
@@ -20,6 +20,10 @@ div.approval {
   background-color: #fdd;
 }
 
+.approved_ready {
+  background-color: #b5d2f9;
+}
+
 div.approval span {
   font-weight: bold;
 }
