--- a/style.less
+++ b/style.less
@@ -12,6 +12,10 @@
   background-color: #dfd;
 }
 
+.plugin__approve_old {
+  background-color: #fffca8;
+}
+
 .plugin__approve_red {
   background-color: #fdd;
 }
