add diffirent color for outdated approved pages fix de translations

--- a/style.less
+++ b/style.less
@@ -8,11 +8,15 @@
   padding: 2px 10px;
 }
 
-.plugin__approve_green {
+.plugin__approve_approved {
   background-color: #dfd;
 }
 
-.plugin__approve_red {
+.plugin__approve_old_approved {
+  background-color: #fffca8;
+}
+
+.plugin__approve_draft {
   background-color: #fdd;
 }
 
